[package]
name = "rumasm"
version = "0.1.0"
edition = "2021"
authors = ["William Mann"]
description = "A simple program to assemble a rudimentary assembly language for RUM, the Rust Universal Machine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nom = "7.1.3"